--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
   "dependencies": {
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1"
+  },
+  "browser": {
+  "fs": false,
+   "path": false,
+   "os": false
   }
 }
