--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "sass/mystyles.scss",
   "author": "",
   "scripts": {
-    "css-build": "node-sass --omit-source-map-url sass/mystyles.scss css/mystyles.css",
+    "css-build": "node-sass --omit-source-map-url mybulma/sass/mystyles.scss mybulma/css/mystyles.css",
     "css-watch": "npm run css-build -- --watch",
     "start": "npm run css-watch",
     "build": "webpack --mode production",
@@ -15,12 +15,11 @@
   "devDependencies": {
     "bulma": "^0.9.3",
     "html-webpack-plugin": "^5.5.0",
-    "node-sass": "^6.0.1"
-  },
-  "dependencies": {
+    "node-sass": "^6.0.1",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1"
   },
+  "dependencies": {},
   "browser": {
     "fs": false,
     "path": false,
